--- a/api/.env
+++ b/api/.env
@@ -1,3 +1,3 @@
-MONGO_URL =mongodb+srv://reservi:reservi123456@cluster0.tk5n4.mongodb.net/reservi?retryWrites=true&w=majority
+MONGO_URL =mongodb+srv://nader:neder199877@cluster0.lt1qv.mongodb.net/shop?retryWrites=true&w=majority
 PORT= 5000
 PASS_SEC=Naruto
