--- a/api/.env
+++ b/api/.env
@@ -1,3 +1,3 @@
-MONGO_URL =mongodb+srv://nader:neder199877@cluster0.lt1qv.mongodb.net/shop?retryWrites=true&w=majority
+MONGO_URL =mongodb+srv://nader:Thy903QdCtwKulva@cluster0.lt1qv.mongodb.net/shop?retryWrites=true&w=majority
 PORT= 5000
 PASS_SEC=Naruto
