--- a/api/.env
+++ b/api/.env
@@ -1,3 +1,4 @@
-MONGO_URL =mongodb+srv://nader:Thy903QdCtwKulva@cluster0.lt1qv.mongodb.net/shop?retryWrites=true&w=majority
-PORT= 5000
-PASS_SEC=Naruto
+MONGO_URL = mongodb+srv://nader:Thy903QdCtwKulva@cluster0.lt1qv.mongodb.net/shop?retryWrites=true&w=majority
+PORT = 5000
+PASS_SEC = naruto
+JWT_SEC = naruto
